# vision_cenital

./: readme.md
calibration/: calibrate.py  camera_params.yaml  captura_calibracion_h264.py  capture.py  capture1.py  experimento_camara.py  homography.py  homography.yaml  medir_pista.py  nucleo_video_h264.py  offline_homo.py  pyproject.toml  requirements.txt
vision_cenital/: .gitignore  ARCHITECTURE.md  pyproject.toml  setup.cfg  setup.py
vision_cenital/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
vision_cenital/install/vision_cenital/lib/vision_cenital/: coordinator_node  virtual_cargabot_node
vision_cenital/install/vision_cenital/share/vision_cenital/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
vision_cenital/install/vision_cenital/share/vision_cenital/resource/: homography_retry.yaml
vision_cenital/log/: latest_build
vision_cenital/resource/: homography.yaml  homography_original.yaml
vision_cenital/src/vision_cenital/: __init__.py
vision_cenital/vision_cenital/: cargabot_vision_app.py  overhead_coordinator_node.py  perception.py  planning.py  record_camera.py  standalone_app.py  test_aruco_standalone.py  virtual_cargabot_node.py
