[project]
name = "calibration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<2",
    "pillow>=12.2.0",
    "pydantic>=2.0",
    "pygame>=2.6.1",
    "pyyaml>=6.0.3",
    "requests>=2.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
